--- a/style.css
+++ b/style.css
@@ -1603,9 +1603,18 @@
 
   /*__________Renad__________*/  
 
+  /*Font*/
+  html body .edit-page,
+html body .edit-page *,
+html body .add-page,
+html body .add-page *,
+html body .my-recipes-page,
+html body .my-recipes-page * {
+  font-family: "Libre Baskerville", serif !important;
+}
 
   /*My recipes page style*/
-  /* My recipes page style (scoped) */
+  
 body { background-color: #efe1b5; }
 
 .my-recipes-page { 
@@ -1631,7 +1640,7 @@ body { background-color: #efe1b5; }
   font-weight: 800;
 }
 
-.my-recipes-page .add-recipe-btn { /* نفس كودك */ 
+.my-recipes-page .add-recipe-btn { 
   background: linear-gradient(135deg, #6e5034, #6e5034);
   color: #fff;
   padding: 0.9rem 1.8rem;
@@ -1729,7 +1738,6 @@ body { background-color: #efe1b5; }
 
 
  /*Add recipe page style*/
-/* Add recipe page style (scoped) */
 
 .add-page { 
   max-width: 1100px;
@@ -1877,7 +1885,7 @@ body { background-color: #efe1b5; }
   .add-page{ margin:1.5rem; padding:1.5rem; }
   .add-page .add-header{ flex-direction:column; align-items:flex-start; }
 }
-/* Edit recipe page style (scoped) */
+/* Edit recipe page style */
 
 .edit-page{
   max-width:1100px;
